@@ -425,6 +425,11 @@ if (isset($_POST['imaptest']) && !empty($_POST['_host']) && !empty($_POST['_user
   $imap_user = idn_to_ascii($_POST['_user']);
 
   $imap = new rcube_imap(null);
+  $imap->set_options(array(
+    'auth_type' => $RCI->getprop('imap_auth_type'),
+    'debug'     => $RCI->getprop('imap_debug'),
+  ));
+
   if ($imap->connect($imap_host, $imap_user, $_POST['_pass'], $imap_port, $imap_ssl)) {
     $RCI->pass('IMAP connect', 'SORT capability: ' . ($imap->get_capability('SORT') ? 'yes' : 'no'));
     $imap->close();
